--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj
@@ -96,7 +96,7 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\jjfuh\OneDrive\Desktop\PaleoPals\PaleoPals\PaleoPals\ASSETS\third_party</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\gameuser\Desktop\PaleoPals\PaleoPals\PaleoPals\ASSETS\third_party;C:\SFML-3.0.0\include;C:\Users\jjfuh\OneDrive\Desktop\PaleoPals\PaleoPals\PaleoPals\ASSETS\third_party</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
