--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Map.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
   </ItemGroup>
