--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Museum.cpp" />
     <ClCompile Include="Trader.cpp" />
   </ItemGroup>
@@ -29,6 +30,7 @@
     <ClInclude Include="constants.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Museum.h" />
     <ClInclude Include="Trader.h" />
   </ItemGroup>
