pause screen implemented

--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Museum.cpp" />
+    <ClCompile Include="Paused.cpp" />
     <ClCompile Include="Trader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -32,6 +33,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Museum.h" />
+    <ClInclude Include="Paused.h" />
     <ClInclude Include="Trader.h" />
   </ItemGroup>
   <ItemGroup>
