--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Paused.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Paused.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
