--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Behaviours.cpp">
       <Filter>Source Files\Behaviours</Filter>
     </ClCompile>
+    <ClCompile Include="Fossil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="Behaviours.h">
       <Filter>Header Files\Behaviours</Filter>
+    </ClInclude>
+    <ClInclude Include="Fossil.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
