fixed mining behaviour and added multiple instances of paleontologist

--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj.filters
@@ -79,7 +79,7 @@
       <Filter>Source Files\Behaviours</Filter>
     </ClCompile>
     <ClCompile Include="Fossil.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Gameplay</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -114,7 +114,7 @@
       <Filter>Header Files\Behaviours</Filter>
     </ClInclude>
     <ClInclude Include="Fossil.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Gameplay</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
