added view frustrum culling, corrected paleontologist behaviour, now attempts to seek nearest fossil after going between states (idle, walk, search), fixed traversal error where paleontologist teleported after finishing mining, added basic trader screen menu (still needs work), implemented spawning in more paleontologists

--- a/PaleoPals/PaleoPals/PaleoPals.vcxproj
+++ b/PaleoPals/PaleoPals/PaleoPals.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="Paused.cpp" />
     <ClCompile Include="Researcher.cpp" />
     <ClCompile Include="Trader.cpp" />
+    <ClCompile Include="TraderMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Behaviours.h" />
@@ -42,7 +43,7 @@
     <ClInclude Include="Paleontologist.h" />
     <ClInclude Include="Paused.h" />
     <ClInclude Include="Researcher.h" />
-    <ClInclude Include="Trader.h" />
+    <ClInclude Include="TraderMenu.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="ASSETS\IMAGES\SFML-LOGO.png">
